--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 -add in commissions tab
 -update favicon with SL logo
--finish about, about_shanngens
--remove html footers
+-finish instagram about
+-remove .html from urls
 -update Instagram feed, once in a while
